--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <title>LiveGram</title>
   <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
 
-  <script src="lib/p5.js" type="text/javascript"></script>
-  <script src="lib/p5.dom.js" type="text/javascript"></script>
-  <script src="lib/p5.sound.js" type="text/javascript"></script>
+  <script src="./lib/p5.js" type="text/javascript"></script>
+  <script src="./lib/p5.dom.js" type="text/javascript"></script>
+  <script src="./lib/p5.sound.js" type="text/javascript"></script>
 
-  <script src="sketch.js" type="text/javascript"></script>
+  <script src="./sketch.js" type="text/javascript"></script>
 
   <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./main.css">
 
-  <script src="createSketch.js" type="text/javascript"></script>
+  <script src="./createSketch.js" type="text/javascript"></script>
 
 </head>
 
@@ -25,8 +25,8 @@
     <div id="main-canvas"></div>
   </figure>
 
-  <figure id="camera-2" class="_1977" >
-    <div id="canvas-2"></div>
+  <figure id="camera-1997" class="_1977 preview-container" >
+    <div id="canvas-1997"></div>
   </figure>
 
 </html>
