--- a/index.html
+++ b/index.html
@@ -19,28 +19,36 @@
 </head>
 
 <body>
-</body>
+  <div id="content">
 
-  <figure id="main-camera" class="toaster" >
-    <div id="main-canvas"></div>
-  </figure>
+    <div id="title">
+      LiveGram
+    </div>
 
-  <div class="preview-container">
-    <figure id="camera-1997" class="_1977 preview-camera" >
-      <div id="canvas-1997"></div>
+    <figure id="main-camera" class="toaster" >
+      <div id="main-canvas"></div>
     </figure>
-    <figure id="camera-kelvin" class="kelvin preview-camera" >
-      <div id="canvas-kelvin"></div>
-    </figure>
-    <figure id="camera-aden" class="aden preview-camera" >
-      <div id="canvas-aden"></div>
-    </figure>
-    <figure id="camera-brannan" class="brannan preview-camera" >
-      <div id="canvas-brannan"></div>
-    </figure>
-    <figure id="camera-nashville" class="nashville preview-camera" >
-      <div id="canvas-nashville"></div>
-    </figure>
+
+    <div id="preview-container">
+      <figure id="camera-1997" class="_1977 preview-camera" >
+        <div id="canvas-1997"></div>
+      </figure>
+      <figure id="camera-kelvin" class="kelvin preview-camera" >
+        <div id="canvas-kelvin"></div>
+      </figure>
+      <figure id="camera-aden" class="aden preview-camera" >
+        <div id="canvas-aden"></div>
+      </figure>
+      <figure id="camera-brannan" class="brannan preview-camera" >
+        <div id="canvas-brannan"></div>
+      </figure>
+      <figure id="camera-nashville" class="nashville preview-camera" >
+        <div id="canvas-nashville"></div>
+      </figure>
+    </div>
+
   </div>
+
+</body>
 
 </html>
