--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>LiveGram</title>
   <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+  <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Work+Sans" rel="stylesheet">
 
   <script src="./lib/p5.js" type="text/javascript"></script>
   <script src="./lib/p5.dom.js" type="text/javascript"></script>
@@ -28,6 +29,12 @@
     <figure id="main-camera" class="toaster" >
       <div id="main-canvas"></div>
     </figure>
+
+    <div id="takePhotoBtn">
+      <div id="btn-text">
+        TAKE PHOTO
+      </div>
+    </div>
 
     <div id="preview-container">
       <figure id="camera-1997" class="_1977 preview-camera" >
