--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="content">
 
     <div id="title">
-      LiveGram
+      InstaGif
     </div>
 
     <figure id="main-camera" class="no-filter" >
@@ -35,7 +35,7 @@
 
     <div id="takePhotoBtn">
       <div id="btn-text">
-        TAKE PHOTO
+        Record gif
       </div>
     </div>
 
