--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
   <script src="./lib/p5.dom.js" type="text/javascript"></script>
   <script src="./lib/p5.sound.js" type="text/javascript"></script>
 
+  <!-- jQuery -->
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
   <link rel="stylesheet" href="./main.css">
 
   <!-- Javascript -->
+  <script src="./events.js" type="text/javascript"></script>
   <script src="./filters.js" type="text/javascript"></script>
   <script src="./sketch.js" type="text/javascript"></script>
   <script src="./createSketch.js" type="text/javascript"></script>
