Added gif capability

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
 
+  <!-- CCapture -->
+  <script src="./lib/CCapture.js"></script>
+  <script src="./lib/gif.js"></script>
+  <script src="./lib/download.js"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
   <link rel="stylesheet" href="./main.css">
