what gif button

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
   <div id="content">
 
     <div id="title">
-      InstaGif
+      LiveGram
     </div>
 
     <figure id="main-camera" class="no-filter" >
       <div id="main-canvas"></div>
     </figure>
 
-    <div id="takePhotoBtn">
+    <!-- <div id="takePhotoBtn">
       <div id="btn-text">
         Record gif
       </div>
-    </div>
+    </div> -->
 
     <div id="preview-container">
     </div>
